# BookACourt

./: .env  README.md  main.py  package-lock.json  pyproject.toml
src/: crud.py  main.py  models.py  schemas.py  service.py  utils.py
src/alembic/: env.py
src/alembic/versions/: 10df02b2b411_remove_refresh_table.py  326d69de431c_initial_tables.py  6d01437989ea_update_facility_bookings_resource_table.py  985d290a4c3d_recreate_from_scratch.py
src/core/: config.py  db.py  security.py  storage.py
src/router/: auth.py  depandency.py  main.py  service.py
src/router/api_v1/: bookings.py  facilitys.py  login.py  resource.py  user.py
src/router/web_v1/: home.py  login.py  user.py
src/static/: base.html  home.html  index.html  login.html  profile.html  signup.html
src/static/css/: input.css  output.css
src/templates/auth/: login.html  signup.html
src/templates/layout/: base.html
src/templates/pages/: booking.html  bookings.html  home.html  profile.html  venue.html  venues.html
